--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e8c1177f-83e1-4d54-84d8-f27b9f841271"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
